2007-10-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.[ch]: Added ClutterTimeline:duration,
	a property for setting the duration of a timeline in milliseconds.
	The property comes with accessors and a new constructor. The
	frame rate used is the default value.

	* clutter/clutter-private.h:
	* clutter/clutter-main.[ch]: Add clutter_get_default_frame_rate()
	and clutter_set_default_frame_rate(); these two functions control
	the default frame rate to be used when creating timelines. Currently
	is set to 60 frames-per-second.

2007-10-16  Tomas Frydrych  <tf@o-hand.com>

	* build/msvc_2k5:
	Added MSVC project files.

2007-10-16  Emmanuele bassi  <ebassi@openedhand.com>

	* clutter/clutter-color.c: Copy the alpha when shading.

2007-10-16  Tomas Frydrych  <tf@o-hand.com>
	
	* clutter.symbols:
	Added a bunch of missing symbols.
	
	* clutter/clutter-script.c:
	* json/json-node.c:
	Use g_slice_new0 instead of g_slice_new to avoid passing
	garbage to functions.
	
	* tests/test-threads.c:
	Replaced non-portable sleep() with g_usleep().
	
2007-10-15  Tomas Frydrych  <tf@o-hand.com>

	* clutter/cogl/gl/cogl-defines.h:
	* clutter/cogl/gl/cogl.c:
	Fixup GL include for windows.

2007-10-15  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	More events documentation.

	* clutter/clutter-event.c:
	* clutter/clutter-event.h:
	Add synthetic flag and make put_event use it 
	(via modded patch from pippin)

	* clutter/clutter-main.c: (clutter_do_event):
	dont use put event anymore when pushing enter/leave events.

2007-10-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/pango/Makefile.am: Compile with the debug flags, if
	set.

2007-10-12  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Remove non-public symbols.

2007-10-12  Tomas Frydrych  <tf@o-hand.com>

	* clutter.symbols:
	A list of public symbols, one per line; semi-autogenerated, so
	might not be complete -- PLEASE when adding new public APIs, add 